--- a/index.html
+++ b/index.html
@@ -4,28 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-    crossorigin="anonymous"
-  />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>DebiFacil</title>
   </head>
   <body>
-    <div class="">
-      <img
-        src="/img/Group.svg"
-        class="logo img-fluid mt-5 rounded mx-auto d-block"
-      />
-    </div>
+    <!-- Meu Deus Bootstrap é muito ruim. Tailwind é muito melhor -->
+    <h1 class="fs-1 fw-bolder text-center">DebiFacil</h1>
+    <img src="/img/Rectangle.svg" class="img-fluid rounded mx-auto d-block" />
     <div class="d-flex d-flex align-items-end justify-content-between">
-      <a href="login.html" class="btn-inicial btn btn-primary bg-dark justify-content-between m-3"
+      <a href="login.html" class="btn btn-light btn-lg"
         >LOG IN</a
       >
-      <a href="cadastro.html" class="btn-inicial btn btn-primary bg-dark justify-content-between m-3"
+      <a
+        href="cadastro.html"
+        class="btn btn-dark btn-lg"
         >CADASTRO</a
       >
     </div>
