--- a/login.html
+++ b/login.html
@@ -11,44 +11,47 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Cad DebiFacil</title>
+    <title>Login DebiFacil</title>
   </head>
   <body>
-    <h1 class="fs-1 fw-bolder text-center">Login</h1>
-    <form>
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label"
-          >Endereço de e-mail</label
-        >
-        <input
-          type="email"
-          class="form-control"
-          id="exampleInputEmail1"
-          aria-describedby="emailHelp"
-          placeholder="seunome@exemplo.com"
-        />
-        <div id="emailHelp" class="form-text">
-          We'll never share your email with anyone else.
+    <main class="d-flex flex-column align-items-center">
+      <h1 class="fs-1 fw-bolder text-center">Login</h1>
+      <form>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label"
+            >Endereço de e-mail</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            id="exampleInputEmail1"
+            aria-describedby="emailHelp"
+            placeholder="seunome@exemplo.com"
+          />
+          <div id="emailHelp" class="form-text">Você não receberá spam</div>
         </div>
-      </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label"
-          >A senha deve conter pelo menos 6 digitos</label
-        >
-        <input
-          type="password"
-          class="form-control"
-          id="exampleInputPassword1"
-          placeholder="*******"
-        />
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    <div class="d-grid gap-2">
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label"
+            >A senha deve conter pelo menos 6 digitos</label
+          >
+          <input
+            type="password"
+            class="form-control"
+            id="exampleInputPassword1"
+            placeholder="*******"
+          />
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+          <label class="form-check-label" for="exampleCheck1"
+            >Check me out</label
+          >
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </main>
+
+    <div class="d-flex flex-column align-items-center">
       <a
         href="home.html"
         class="google btn-inicial btn btn-primary bg-danger justify-content-between m-3"
