--- a/home.html
+++ b/home.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -78,40 +77,34 @@
     </header>
 
     <main class="d-flex flex-column align-items-center">
-      <div class="card m-2" >
+      <div class="card w-50 m-2" >
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <h5 class="card-title">Deezer</h5>
+          <h6 class="card-subtitle mb-2 text-muted">Serviço de música</h6>
+          <p class="card-text">Banco Next</p>
+          <p class="card-text">Valor: R$ 31,00</p>
+          <a href="#" class="card-link">Editar</a>
+          <a href="#" class="card-link">Serviços</a>
         </div>
       </div>
-      <div class="card m-2">
+      <div class="card w-50 m-2" >
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <h5 class="card-title">Netflix</h5>
+          <h6 class="card-subtitle mb-2 text-muted">Serviço de vídeo</h6>
+          <p class="card-text">Banco Bradesco</p>
+          <p class="card-text">Valor: R$ 50,00</p>
+          <a href="#" class="card-link">Editar</a>
+          <a href="#" class="card-link">Serviços</a>
         </div>
       </div>
-      <div class="card m-2">
+      <div class="card w-50 m-2" >
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <h5 class="card-title">Enel</h5>
+          <h6 class="card-subtitle mb-2 text-muted">Conta de luz</h6>
+          <p class="card-text">Banco Neon</p>
+          <p class="card-text">Valor: R$ 121,00</p>
+          <a href="#" class="card-link">Editar</a>
+          <a href="#" class="card-link">Serviços</a>
         </div>
       </div>
     </main>
