--- a/TesteCadastro.html
+++ b/TesteCadastro.html
@@ -14,6 +14,7 @@
     <title>Cad DebiFacil</title>
   </head>
   <body>
+    <!-- Tela a mais pra teste, precisa ficar no nivel das oficiais -->
     <h1 class="fs-1 fw-bolder text-center">Cadastro</h1>
     <form>
       <div class="mb-3">
